--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,17 @@
               "browser": "."
             },
             "browser": "index.tsx",
-            "tsConfig": "tsconfig.json"
+            "tsConfig": "tsconfig.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "src/assets",
+                "output": "/assets"
+              }
+            ],
+            "styles": [
+              "src/styles.css"
+            ]
           },
           "configurations": {
             "production": {
@@ -48,5 +58,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": false
   }
 }
