--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,11 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
-  "framework": null
+  "framework": null,
+  "rewrites": [
+    {
+      "source": "/:path((?!sitemap\\.xml|robots\\.txt).*)",
+      "destination": "/index.html"
+    }
+  ]
 }
