--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "ng serve",
-    "build": "ng build",
-    "preview": "ng serve --configuration=production"
+  "dev": "ng serve",
+  "build": "ng build && copy public\\sitemap.xml dist\\sitemap.xml",
+  "preview": "ng serve --configuration=production"
   },
   "dependencies": {
     "@angular/build": "^21.1.0",
