--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,17 @@
   "buildCommand": "npm run build",
   "outputDirectory": "dist",
   "framework": null,
+  "headers": [
+    {
+      "source": "/sitemap.xml",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/xml"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/:path((?!sitemap\\.xml|robots\\.txt).*)",
